# sapphire

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  harbour-sapphire.desktop  harbour-sapphire.pro
qml/: main.qml
qml/components/: SketchServerItem.qml
qml/cover/: CoverPage.qml
qml/pages/: ArtboardView.qml  DiscoverServersPage.qml  DocumentPage.qml
rpm/: harbour-sapphire.spec
src/: deviceinfo.cpp  deviceinfo.h  main.cpp  qqmlobjectlistmodel.h  sketchartboard.cpp  sketchartboard.h  sketchdocument.cpp  sketchdocument.h  sketchpage.cpp  sketchpage.h  sketchserver.cpp  sketchserver.h  sketchservermodel.cpp  sketchservermodel.h
